edit manage preferences

--- a/index.html
+++ b/index.html
@@ -487,27 +487,37 @@
                         Merkezini ziyaret ederek istediğiniz zaman izni geri çekebilirsiniz.</p>
                 </div>
                 <div id="manage-preference">
+
                     <div class="manage-preference-content">
-                        <div >
-                            <p class="text">Sitemizin çalışmasını sağlamak, trafiği analiz etmek ve hizmetlerimizi geliştirmek için
-                                gerekli olan çerezleri ve diğer
-                                teknolojileri kullanıyoruz. Gizlilik Bildirimimizi okuyarak daha fazla bilgi
-                                edinebilirsiniz. "Tümünü kabul et"
-                                seçeneğine tıklayarak, bize ve 61 satıcılarımıza cihazınızdaki bilgileri saklamamıza
-                                ve/veya cihazınızdaki bilgilere
-                                erişmemize ve web sitelerimiz ve uygulamalarımız içinde ve dışında kişiselleştirilmiş
-                                reklam ve içerik sunmak için IP
-                                adresi gibi kişisel verilerinizi kullanmamıza ve reklamların ve içeriğin etkinliğini
-                                ölçmemize, hedef kitle araştırması
-                                yaparak hizmetler geliştirmemize izin vermiş olursunuz. "Tümünü reddet" seçeneğine
-                                tıklayarak izni reddedebilirsiniz. Bu
-                                amaçlar ve ortaklarımız hakkında daha fazla bilgi edinmek veya tercihlerinizi uygulamak
-                                için aşağıdaki "Tercihleri
-                                Yönet" düğmesine tıklayın. Bu seçimler ortaklarımıza iletilecek ve tarama deneyiminizi
-                                etkilemeyecektir. Gizlilik
-                                Merkezini ziyaret ederek istediğiniz zaman izni geri çekebilirsiniz.</p>
+                        <p class="text">Sitemizin çalışmasını sağlamak, trafiği analiz etmek ve hizmetlerimizi
+                            geliştirmek için
+                            gerekli olan çerezleri ve diğer
+                            teknolojileri kullanıyoruz. Gizlilik Bildirimimizi okuyarak daha fazla bilgi
+                            edinebilirsiniz. "Tümünü kabul et"
+                            seçeneğine tıklayarak, bize ve 61 satıcılarımıza cihazınızdaki bilgileri saklamamıza
+                            ve/veya cihazınızdaki bilgilere
+                            erişmemize ve web sitelerimiz ve uygulamalarımız içinde ve dışında kişiselleştirilmiş
+                            reklam ve içerik sunmak için IP
+                            adresi gibi kişisel verilerinizi kullanmamıza ve reklamların ve içeriğin etkinliğini
+                            ölçmemize, hedef kitle araştırması
+                            yaparak hizmetler geliştirmemize izin vermiş olursunuz. "Tümünü reddet" seçeneğine
+                            tıklayarak izni reddedebilirsiniz. Bu
+                            amaçlar ve ortaklarımız hakkında daha fazla bilgi edinmek veya tercihlerinizi uygulamak
+                            için aşağıdaki "Tercihleri
+                            Yönet" düğmesine tıklayın. Bu seçimler ortaklarımıza iletilecek ve tarama deneyiminizi
+                            etkilemeyecektir. Gizlilik
+                            Merkezini ziyaret ederek istediğiniz zaman izni geri çekebilirsiniz.</p>
+                        <div class="content-options ">
+                            <div class=" content-options-items">
+                                <a class="item-option active">Amaçlar</a>
+                                <a class="item-option ">Özellikler</a>
+                                <a class="item-option">Satıcılar</a>
+                            </div>
+
                         </div>
                     </div>
+
+
                 </div>
                 <div class="right-button-container">
                     <button class="btn btn-1">Tümünü Kabul Et</button>
