edit manage preference

--- a/index.html
+++ b/index.html
@@ -514,6 +514,33 @@
                                 <a class="item-option">Satıcılar</a>
                             </div>
 
+                            <!--Amaçlar -->
+                            <div id="purposes">
+                                <p class="text">Verilerinizin işlenme amaçları ve işlendiği özel niteliklerin bir
+                                    listesini aşağıda bulabilirsiniz. Aşağıdaki düğmeleri
+                                    kullanarak haklarınızı belirli amaçlar doğrultusunda, izne veya meşru menfaate
+                                    dayalı olarak kullanabilirsiniz.</p>
+                                <div class="purposes-content">
+                                    <div class="purposes-content-items">
+                                            <a class="purposes-item active">İzin</a>
+                                            <a class="purposes-item">Meşru Menfaat</a>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <!-- Özellikler -->
+                            <div id="feature">
+                                <p>Özellikler</p>
+                            </div>
+
+
+                            <!-- Satıcılar -->
+
+                            <div id="sellers">
+                                <p>Satıcılar</p>
+                            </div>
+
                         </div>
                     </div>
 
