edit purpose list

--- a/index.html
+++ b/index.html
@@ -521,10 +521,168 @@
                                     kullanarak haklarınızı belirli amaçlar doğrultusunda, izne veya meşru menfaate
                                     dayalı olarak kullanabilirsiniz.</p>
                                 <div class="purposes-content">
-                                    <div class="purposes-content-items">
+                                    <div class="center-element">
+                                        <div class="purposes-content-items">
                                             <a class="purposes-item active">İzin</a>
                                             <a class="purposes-item">Meşru Menfaat</a>
+                                        </div>
+
                                     </div>
+
+                                    <div id="permission">
+                                        <h5 class="purposes-head">Amaçlar</h5>
+                                        <ul class="purposes-list">
+                                            <li class="purposes-list-item">
+                                                <div class="purposes-list-item-content text">
+                                                    <i class="fa-solid fa-chevron-down"></i>
+                                                    <p>Bilgileri bir cihazda depolamak ve/veya onlara cihazdan erişmek
+                                                    </p>
+                                                </div>
+                                                <label class="switch">
+                                                    <input type="checkbox"  class="checkbox">
+                                                    <span class="slider"></span>
+                                                </label>
+                                            </li>
+                                            <li class="purposes-list-item">
+                                                <div class="purposes-list-item-content text">
+                                                    <i class="fa-solid fa-chevron-down"></i>
+                                                    <p>Reklam seçmek için sınırlı veri kullanmak
+                                                    </p>
+                                                </div>
+                                                <label class="switch">
+                                                    <input type="checkbox" class="checkbox">
+                                                    <span class="slider"></span>
+                                                </label>
+                                            </li>
+                                            <li class="purposes-list-item">
+                                                <div class="purposes-list-item-content text">
+                                                    <i class="fa-solid fa-chevron-down"></i>
+                                                    <p>Kişiselleştirilmiş reklam için profiller oluşturmak
+                                                    </p>
+                                                </div>
+                                                <label class="switch">
+                                                    <input type="checkbox" class="checkbox">
+                                                    <span class="slider"></span>
+                                                </label>
+                                            </li>
+                                            <li class="purposes-list-item">
+                                                <div class="purposes-list-item-content text">
+                                                    <i class="fa-solid fa-chevron-down"></i>
+                                                    <p>Kişiselleştirilmiş reklam seçmek için profilleri kullanmak
+                                                    </p>
+                                                </div>
+                                                <label class="switch">
+                                                    <input type="checkbox" class="checkbox">
+                                                    <span class="slider"></span>
+                                                </label>
+                                            </li>
+                                            <li class="purposes-list-item">
+                                                <div class="purposes-list-item-content text">
+                                                    <i class="fa-solid fa-chevron-down"></i>
+                                                    <p>İçeriği kişiselleştirmek için profiller oluşturmak
+
+                                                    </p>
+                                                </div>
+                                                <label class="switch">
+                                                    <input type="checkbox" class="checkbox">
+                                                    <span class="slider"></span>
+                                                </label>
+                                            </li>
+                                            <li class="purposes-list-item">
+                                                <div class="purposes-list-item-content text">
+                                                    <i class="fa-solid fa-chevron-down"></i>
+                                                    <p>Kişiselleştirilmiş içerik seçmek için profilleri kullanmak
+                                                    </p>
+                                                </div>
+                                                <label class="switch">
+                                                    <input type="checkbox"  class="checkbox">
+                                                    <span class="slider"></span>
+                                                </label>
+                                            </li>
+                                            <li class="purposes-list-item">
+                                                <div class="purposes-list-item-content text">
+                                                    <i class="fa-solid fa-chevron-down"></i>
+                                                    <p>Reklam performansını ölçmek
+                                                    </p>
+                                                </div>
+                                                <label class="switch">
+                                                    <input type="checkbox" class="checkbox">
+                                                    <span class="slider"></span>
+                                                </label>
+                                            </li>
+                                            <li class="purposes-list-item">
+                                                <div class="purposes-list-item-content text">
+                                                    <i class="fa-solid fa-chevron-down"></i>
+                                                    <p>İçerik performansını ölçmek
+                                                    </p>
+                                                </div>
+                                                <label class="switch">
+                                                    <input type="checkbox" class="checkbox">
+                                                    <span class="slider"></span>
+                                                </label>
+                                            </li>
+                                            <li class="purposes-list-item">
+                                                <div class="purposes-list-item-content text">
+                                                    <i class="fa-solid fa-chevron-down"></i>
+                                                    <p>İstatistikler veya farklı kaynaklardan gelen verilerin
+                                                        bileşimleri yoluyla hedef kitleleri anlamak
+                                                    </p>
+                                                </div>
+                                                <label class="switch">
+                                                    <input type="checkbox" class="checkbox">
+                                                    <span class="slider"></span>
+                                                </label>
+                                            </li>
+                                            <li class="purposes-list-item">
+                                                <div class="purposes-list-item-content text">
+                                                    <i class="fa-solid fa-chevron-down"></i>
+                                                    <p>Hizmetleri geliştirmek ve iyileştirmek
+                                                    </p>
+                                                </div>
+                                                <label class="switch">
+                                                    <input type="checkbox" class="checkbox">
+                                                    <span class="slider"></span>
+                                                </label>
+                                            </li>
+
+
+                                        </ul>
+
+                                    </div>
+                                    <div id="legitimate-interest">
+                                        <h5 class="purposes-head">Özle Amaçlar</h5>
+                                        <ul class="">
+                                            <li class="purposes-list-item">
+                                                <div class="purposes-list-item-content text">
+                                                    <i class="fa-solid fa-chevron-down"></i>
+                                                    <p>Güvenlik sağlamak, yolsuzluğu önlemek ve saptamak ve hataları
+                                                        düzeltmek
+                                                    </p>
+                                                </div>
+
+                                            </li>
+                                            <li class="purposes-list-item">
+                                                <div class="purposes-list-item-content text">
+                                                    <i class="fa-solid fa-chevron-down"></i>
+                                                    <p>Reklam ve içerik sağlamak ve sunmak
+                                                    </p>
+                                                </div>
+
+                                            </li>
+                                            <li class="purposes-list-item">
+                                                <div class="purposes-list-item-content text">
+                                                    <i class="fa-solid fa-chevron-down"></i>
+                                                <p>Gizlilik tercihlerini kaydedin ve iletin
+                                                </p>
+                                                </div>
+                                            
+                                            </li>
+                                          
+                                        </ul>
+                                    </div>
+
+
+
 
                                 </div>
                             </div>
