added login href

--- a/index.html
+++ b/index.html
@@ -243,8 +243,14 @@
 
                 <div class="nav-desktop-menu nav-desktop-menu-1">
                     <!-- Giriş Yap/ Kaydol -->
-                    <p>Giriş yap</p>
-                    <p id="register">Kaydol</p>
+                    <p>
+
+                        <a href="https://auth.wetransfer.com/login">Giriş yap</a>
+                    </p>
+                    <p>
+                        <a href="https://auth.wetransfer.com/login" class="register">Kaydol</a>
+                    </p>
+
                 </div>
             </div>
 
@@ -392,7 +398,7 @@
                     </div>
                     <div class="mobile-menu-content">
                         <div class=" mobile-nav-menu-items">
-                            <p>Giriş Yap</p>
+                            <p><a href="https://auth.wetransfer.com/login">Giriş yap</a></p>
                         </div>
                     </div>
                 </div>
